fix styling table overflow

--- a/main.css
+++ b/main.css
@@ -95,7 +95,8 @@ caption {
     }
     .container{
         width: 95vw;
-        margin: 2rem auto;
-        
+    }
+    th,td{
+       padding: 5px;
     }
   }
